- wxColourDatabase::FindColour(): use Find() instead (NB: different ret type)
- wxHashTable::Next: use wxHashTable::Node* or
                     wxHashTable::compatibility_iterator to store the return
                     value
- wxWave class; use wxSound instead


OTHER CHANGES
=============

2.5.2
-----

All:

- Hindi translations added (Dhananjaya Sharma)

All (GUI):

- wxHtmlWindow now delays image scaling until rendering,
  resulting in much better display of scaled images
- Added UpdateSize to wxSplitterWindow to allow layout while hidden
- implemented Freeze/Thaw() for wxGenericTreeCtrl (Kevin Hock)
- support for KOI8-U encoding added (Yuriy Tkachenko)
- The old wxADJUST_MINSIZE behaviouris now the default behaviour for
  sizer items that are windows.  This means that GetAdjustedBestSize
  will now be called by default to determine the minimum size that a
  window in a sizer should have.  If you want to still use the initial
  size (and not the BestSize) then use the wxFIXED_MINSIZE flag.  When
  windows are added to a sizer their initial size is made the window's
  min size using SetSizeHints, and calls to wxSizer::SetItemMinSize
  are also forwarded to SetSizeHints for window items.

wxMSW:

- wxWindow::Freeze()/Thaw() can now be nested
- Added wxSP_NO_XP_THEME style to wxSplitterWindow to switch off
  XP theming (some applications look bad without 3D borders)
- wxMenuBar::GetLabelTop() doesn't include '&'s in the label any more
- wxRegConf couldn't read global settings without admin privileges and didn't
  even try to do it by default -- now it does
- wxTaskBarIcon must be explicitly destroyed now, otherwise the application
  won't exit even though there are no top level windows

wxMotif:

- removed wxMenuItem::DeleteSubMenu()

wxUniv/X11:

- implemented DrawRoundedRectangle() (clawghoul)

wxHTML:

- improved tables and lists layout algorithms (Tim Kosse)
- <div> handling fix (Xavier Nodet)

Unix:
- fixed priorities of mailcap entries (David Hart)

